--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.6"
 
 install:
-    - pip install flake8 pylint
+    - pip install flake8 pylint python-mpv musicbrainzngs
 
 script:
     - flake8 bum setup.py
